fix alignment of card kpi’s on iphone 5

--- a/client/src/dashboard/styles/dashboard/_card.scss
+++ b/client/src/dashboard/styles/dashboard/_card.scss
@@ -201,6 +201,7 @@
           line-height: 1;
           font-size: $fallback;
           font-size: 1rem;
+          margin: 3px 0 0 0;
         }
       }
     }
