--- a/client/src/dashboard/styles/dashboard/_dashboard.scss
+++ b/client/src/dashboard/styles/dashboard/_dashboard.scss
@@ -195,6 +195,10 @@
     content: '\f111';
     font-family: 'fontawesome';
     padding-right: 10px;
+
+    @media(max-width: $screen-sm - 1) {
+      float: left;
+    }
   }
 
   .widget__definition,
@@ -237,7 +241,6 @@
     }
   }
 }
-
 
 .no-js {
   .widget__definition--title {
